0.05 Not Released

 * Use the default MANIFEST.SKIP file.

 * Add test file t/release-portability.t.

 * Format CHANGES according to CPAN::Changes::Spec. Add test file
   t/release-cpan-changes.t.

0.04 2008-04-06 Tels 77 tests

 * no code changes

 * modernize package and use Module::Install

 * add POD tests

0.03 2004-11-26 Tels 75 tests

 * renamed to Set::Light because there already is a Set::String on CPAN

 * added TODO list

0.02 2004-11-26 Tels 75 tests

 * first version with new/insert/delete/exists/size/is_empty

 * added tests, doc

 * uses a hash, and hv_store() to share the hash elements